--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ humanize
 humanfriendly
 colorama
 asyncio
-pycopy-copy
-google-auth-oauthlib
-google-auth-httplib2
-google-api-python-client
+matplotlib
+python-dateutil
+pytz
